# vdm

./: .flake8  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml  script.php  watcher.py
api/: .flake8  README.md  pyproject.toml
api/vdm/: api.py  booking.py  config.py  customer.py  daily.py  errors.py  extract.py  kpi.py  main.py  rooms.py  themes.py  utilities.py
generate_booking/: script.php
misc/: extract_daily_kpi.py  log_check.py  watcher.py
services/api/: Dockerfile
services/django/: Dockerfile  requirements.txt
services/generator/: Dockerfile
services/generator/lib/EscapeGame/: Database.php
tests/: test_vdm.py
vdm/: main.py
vdm_escape_game/: manage.py
vdm_escape_game/vdm/: apps.py  views.py
vdm_escape_game/vdm_escape_game/: asgi.py  settings.py  urls.py  wsgi.py
vdm_project/: README.md  db.sqlite3  manage.py  requirements.txt
vdm_project/dashboard/: models.py  numFormat.py  urls.py  utilities.py  views.py
vdm_project/dashboard/static/js/: jquery.app.js
vdm_project/dashboard/templates/: base.html  booking_list.html  dashboard_with_pivot.html  get_booking_list.html  layout.html  list_booking.html  order_report.html
vdm_project/dashboard/templates/bookingList/: booking_detail.html  booking_list.html  booking_list_day.html
vdm_project/dashboard/templates/chart/: dashboard360.html  dashboard_client.html  (+2 more)
vdm_project/dashboard/templatetags/: custom_filters.py
vdm_project/register/: forms.py  views.py
vdm_project/register/templates/: index.html
vdm_project/vdm_project/: asgi.py  settings.py  urls.py  wsgi.py
(+104 files in other folders)
