[tool.poetry]
name = "vdm"
version = "0.1.0"
license = "MIT"
readme = "README.md"
description = ""
authors = [
			"majda_a  <majda_a@etna-alternance.net>",
			"humeau_y <humeau_y@etna-alternance.net>",
			"lepage_b <lepage_b@etna-alternance.net>",
			"hauteb_m <hauteb_m@etna-alternance.net>"
]

[tool.poetry.dependencies]
python = "^3.7"
flask = "^1.1.2"
pymongo = "^3.10.1"
Werkzeug = "0.16.1"
flask_restplus = "^0.13.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[tool.poetry.scripts]
vdm = "vdm.main:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
